--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id("kotlin-kapt")
     id 'com.google.dagger.hilt.android'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -49,6 +50,7 @@ android {
 }
 
 dependencies {
+    implementation("androidx.navigation:navigation-compose:2.5.3")
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -60,6 +62,11 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("com.google.dagger:hilt-android:2.44")
+    implementation 'com.google.dagger:hilt-android-gradle-plugin:2.40'
+    implementation 'com.google.android.libraries.navigation:navigation:4.5.0'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
+
     kapt("com.google.dagger:hilt-android-compiler:2.44")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
