--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id("kotlin-kapt")
     id 'com.google.dagger.hilt.android'
     id 'dagger.hilt.android.plugin'
+    id("io.gitlab.arturbosch.detekt")
+
 }
 
 android {
@@ -66,9 +68,14 @@ dependencies {
     implementation 'com.google.android.libraries.navigation:navigation:4.5.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
-
+    implementation "io.insert-koin:koin-android:3.1.2"
+    implementation "io.insert-koin:koin-androidx-compose:3.1.2"
+    implementation 'androidx.palette:palette:1.0.0'
     kapt("com.google.dagger:hilt-android-compiler:2.44")
     testImplementation 'junit:junit:4.13.2'
+    implementation "io.coil-kt:coil-compose:1.4.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
+    implementation "com.jakewharton.timber:timber:5.0.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
